# SSUI

./: .gitignore  .npmrc  Dockerfile  Readme.md  Readme.zh.md  main.py  package-lock.json  package.json  pyproject.toml
.githooks/: pre-commit
.github/workflows/: quicktest.yml  release.yml
backend/: __init__.py  model_patcher.py  raw_model.py  spandrel_image_to_image_model.py  textual_inversion.py
backend/flux/: custom_block_processor.py  denoise.py  model.py  text_conditioning.py  util.py
backend/image_util/: __init__.py  canny.py  composition.py  content_shuffle.py  hed.py  lineart.py  lineart_anime.py
backend/ip_adapter/: ip_adapter.py
backend/model_hash/: model_hash.py
backend/model_manager/: __init__.py  config.py  probe.py  search.py  starter_models.py
backend/onnx/: onnx_runtime.py
backend/patches/: __init__.py  layer_patcher.py  model_patch_raw.py
backend/stable_diffusion/: __init__.py  denoise_context.py  diffusion_backend.py  extensions_manager.py
backend/util/: devices.py  freeu.py  original_weights_storage.py
configs/stable-diffusion/: v1-finetune.yaml  v1-finetune_style.yaml  v1-inference-v.yaml  v1-inference.yaml  v1-inpainting-inference.yaml  v1-m1-finetune.yaml  v2-inference-v.yaml  v2-inference.yaml
custom_modules/example/: ssmodule.yaml
dependencies/: combine_requirements.cjs  install.cjs  install.cmd  install.sh  install_requirements.cjs  linux-dependencies.yaml  macosx-dependencies.yaml  requirements-linux.txt  requirements-macosx.txt  requirements-windows.txt  update_lock.cjs  venv.cjs  windows-dependencies.yaml
dependencies/ThirdPartyLicense/: SD1+SD2-CreativeML.txt  SDXL-CreativeML.txt
desktop/: README.md  package.json
desktop/.storybook/: main.ts  preview.tsx
desktop/scripts/: copy-resources.cjs  copy-resources.js
desktop/src/: App.css  App.tsx  Install.tsx  ModelAdding.tsx  i18n.ts  main.tsx  tray.ts
desktop/src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
doc/: Architecture.en.md  Architecture.md  BuildSystem.en.md  BuildSystem.md  CodeGuide.en.md  CodeGuide.md  Executor.en.md  Executor.md  Extensions.en.md  Extensions.md  FrontendBackendCommunication.en.md  FrontendBackendCommunication.md  Package.en.md  Package.md  RPC.en.md  RPC.md  Sandbox.en.md  Sandbox.md  StableScripts.en.md  StableScripts.md
doc/designs/: Readme.md
doc/details/: Readme.md  (+1 more)
etc/: build.cmd  install.cmd
extension_builder/: package.json  tsconfig.json
extensions/: Readme.md
server/: __main__.py  config_service.py  extensions.py  model_service.py  models.py  opener_service.py  resource_manager.py  script_service.py  server.py  websocket_service.py
ss_executor/: Readme.md  __init__.py  __main__.py  executor_main.py  loader.py  model.py  sandbox.py  scheduler.py  venv.py
ssui/: SD1.py  SDXL.py  __init__.py  annotation.py  base.py  config.py  controller.py
ssui-vscode/: CHANGELOG.md  README.md  package.json
ssui_api/: conditioning.py  denoise.py  model.py
ssui_interface/: index.ts  package.json
tests/: SD1_test.py  SD_test.py  backend_test.py  cosyvoice_test.py  diffsynth_test.py  llm_test.py  mocks.py  omnigen2_test.py  run_tests.py  server_test.py  ss_executor_test.py  stdgen_test.py  trellis_test.py  utils.py
web_ui/: index.html  package.json  vite.config.ts
(+382 files in other folders)
