[tool.poetry]
name = "ssui"
version = "0.1.0"
description = "A web-based user interface for stable scripts"
authors = ["西风逍遥游 <sunxfancy@gmail.com>"]
license = "GPL-3"
readme = "README.md"
packages = [{include = "ssui"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
einops = "^0.8.0"
transformers = "^4.47.1"
tokenizers = "^0.21.0"
safetensors = "^0.4.5"
aiohttp = "^3.11.11"
pyyaml = "^6.0.2"
pillow = "^11.0.0"
virtualenv = "^20.28.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
websockets = "^14.1"
torch = {version = "=2.4.1+cu124", source = "pytorch-gpu-src"}
triton-windows = {version = "=3.1.0.post17", platform = "win32"}
torchvision = {version = "=0.19.1+cu124", source = "pytorch-gpu-src"}
torchaudio = {version = "=2.4.1+cu124", source = "pytorch-gpu-src"}
xformers = {version = "=0.0.28.post1", source = "pytorch-gpu-src"}
torchsde = "=0.2.6"
diffusers = {extras = ["torch"], version = "^0.31.0"}
accelerate = "^1.2.1"
pydantic-settings = "^2.7.0"
pydantic = "^2.10.4"
spandrel = "^0.4.1"
gguf = "^0.14.0"
controlnet-aux = "^0.0.9"
clip-anytorch = "^2.6.0"
compel = "^2.0.3"
deprecated = "^1.2.18"
blake3 = "^1.0.4"
onnxruntime = "^1.21.0"
onnx = "^1.17.0"
picklescan = "^0.0.24"
matplotlib = "^3.10.1"
mediapipe = "^0.10.21"
bitsandbytes = "^0.45.3"
easydict = "^1.13"
rembg = "^2.0.65"
plyfile = "^1.1"
moderngl = "^5.12.0"
scipy = "^1.15.2"
trimesh = "^4.6.5"
xatlas = "^0.0.9"
pyvista = "^0.44.2"
pymeshfix = "^0.17.0"
igraph = "^0.11.8"
kaolin = {url = "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.4.0_cu124/kaolin-0.17.0-cp312-cp312-win_amd64.whl"}
diffrp-nvdiffrast = {path = "trellis/diffrp_nvdiffrast/dist/diffrp_nvdiffrast-0.3.3.1-cp312-cp312-win_amd64.whl"}
spconv-cu124 = "^2.3.8"
diff-gaussian-rasterization = {path = "trellis/diff-gaussian-rasterization/dist/diff_gaussian_rasterization-0.0.0-cp312-cp312-win_amd64.whl"}


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
